# promptc-rs

./: Cargo.toml  LICENSE  README.md
examples/: exam.rs  exam1.rs
src/: lib.rs
src/block/: grammar.pest  mod.rs  parser.rs
src/block_raw/: grammar.pest  mod.rs  parser.rs
src/prompt/: mod.rs
