[package]
name = "promptc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name = "exam"
path = "examples/exam.rs"

[[example]]
name = "exam1"
path = "examples/exam1.rs"


[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "^1.0.*", features = ["derive"] }
deser-json = "0.8.0"
